--- a/vehicle-routing.csproj
+++ b/vehicle-routing.csproj
@@ -9,15 +9,24 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="FastEndpoints" Version="7.1.1" />
-        <PackageReference Include="Google.Maps.RouteOptimization.V1" Version="1.4.0" />
-        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.0" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="10.0.0" />
+        <PackageReference Include="FastEndpoints" Version="7.1.1"/>
+        <PackageReference Include="Google.Maps.RouteOptimization.V1" Version="1.4.0"/>
+        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.0"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="10.0.0"/>
     </ItemGroup>
 
     <ItemGroup>
-        <Compile Remove="Reference/**/*.cs" />
-        <None Include="Reference/**" />
+        <Compile Remove="Reference/**/*.cs"/>
+        <None Include="Reference/**"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <Folder Include="Domain\Shared\" />
+        <Folder Include="Features\Customers\" />
+        <Folder Include="Features\RouteOptimization\" />
+        <Folder Include="Features\Schedule\" />
+        <Folder Include="Features\Vehicles\" />
+        <Folder Include="Features\Workers\" />
     </ItemGroup>
 
 </Project>
